[gd_scene load_steps=5 format=2]

[ext_resource path="res://Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Mundo.gd" type="Script" id=2]
[ext_resource path="res://Mob.tscn" type="PackedScene" id=3]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 63.1562, 0.148987, 0, 0, 0, 0, 322.363, 0.148987, 0, 0, 0, 0, 320.865, 594.977, 0, 0, 0, 0, 55.6646, 596.475, 0, 0, 0, 0, 63.1562, 0.148987 )
}

[node name="Mundo" type="Node"]
script = ExtResource( 2 )
Roca = ExtResource( 3 )

[node name="Player" parent="." instance=ExtResource( 1 )]

[node name="Roca_Timer" type="Timer" parent="."]

[node name="Score_Timer" type="Timer" parent="."]

[node name="Inicio_Timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="Posocion_inicio" type="Position2D" parent="."]
position = Vector2( 194.78, 539.391 )

[node name="Camino" type="Path2D" parent="."]
curve = SubResource( 1 )

[node name="Roca_Posicion" type="PathFollow2D" parent="Camino"]
position = Vector2( 63.1562, 0.148987 )

[connection signal="golpe" from="Player" to="." method="game_over"]
[connection signal="timeout" from="Roca_Timer" to="." method="_on_Roca_Timer_timeout"]
[connection signal="timeout" from="Score_Timer" to="." method="_on_Score_Timer_timeout"]
[connection signal="timeout" from="Inicio_Timer" to="." method="_on_Inicio_Timer_timeout"]
